fix z-index issues with modal and oocean sticker

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -44,6 +44,11 @@
   button {
     border: 0px;
   }
+  .ReactModalPortal .ReactModal__Overlay--after-open {
+    opacity: 1;
+    z-index: 1200;
+    /* background-color: red !important; */
+  }
 
   /* Hide scrollbar for Chrome, Safari and Opera */
   .hide-scrollbar::-webkit-scrollbar {
